# LidarDecode

./: CMakeLists.txt  README.md
include/: Dataframe.hpp  IVisualizer.hpp  LidarDataframe.hpp  LidarIMUDataFrame.hpp  OusterLidarCallback.hpp  Pipeline.hpp  Point.hpp  UdpSocket.hpp
json/: 20250520_1329_OS-2-128_122446000745.json  LEGACY_128x2048.json  RNG19_RFL8_SIG16_NIR16_128x2048.json
src/: IVisualizer.cpp  Main.cpp  OusterLidarCallback.cpp  Pipeline.cpp  UdpSocket.cpp
testcode/: test_open3d  test_open3d.cpp
